--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ and open the template in the editor.
                         <h1> This is main header</h1>
                         <h2> This is sub header</h2>
                     </header>
-                    <p>This is content of article</p>
+                    <p> This is new This is content of article</p>
                     <footer>
                         --This article was written by Ranjit Jena
                     </footer>
