--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ and open the template in the editor.
             <section class="left_side">
                 <article>
                     <header>
-                        <h1> This is main header</h1>
+                        <h1> version 1.0</h1>
                         <h2> This is sub header</h2>
                     </header>
                     <p> This is new This is content of article</p>
