--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input class='search-key' type="search" placeholder="Enter name"/>
     <ul class='list employee-list'></ul>
 </div>
-
+<script src="cordova.js"></script>
 <script src="lib/jquery.js"></script>
 <script src="js/services/memory/EmployeeService.js"></script>
 <script src="js/app.js"></script>
