--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <ul class='list employee-list'></ul>
 </div>
 <script src="lib/jquery.js"></script>
+<script src="cordova.js"></script>
+
 <script src="js/services/memory/EmployeeService.js"></script>
 <script src="js/app.js"></script>
 </body>
