--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <script src="lib/handlebars.js"></script>
 <script src="cordova.js"></script>
 <script src="js/services/memory/EmployeeService.js"></script>
+<script src="js/EmployeeListView.js"></script>
+<script src="js/HomeView.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
