--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
 					  </a>
 				  </li>
 
+				  <li class="table-view-cell media">
+				    <a hre="#" class="push-right add-contact-btn">
+				        <span class="media-object pull-left"></span>
+				        <div class="media-body">
+				            Add to contacts
+				        </div>
+				    </a>
+				 </li>
+
               </ul>
           </div>
       </div>
