--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
   </script>
 
 <script src="lib/jquery.js"></script>
+<script src="cordova.js"></script>
 <script src="lib/router.js"></script>
 <script src="lib/handlebars.js"></script>
-<!--<script src="cordova.js"></script>-->
 <script src="js/services/memory/EmployeeService.js"></script>
 <script src="js/EmployeeListView.js"></script>
 <script src="js/HomeView.js"></script>
